--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,8 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 application.desc=Anti Inference Hub is the first dynamic query processing engine that defends against the Inference Problem in Multilevel Databases by integrating smoothly with common DBMSs (Oracle, PostgreSQL, and MySQL), and monitoring queries submitted by users.
-application.homepage=http://aih.sourceforge.net
+application.homepage=https://github.com/angyjoe/aih
 application.title=Anti Inference Hub
 application.vendor=Sari Haj Hussein
 build.classes.dir=${build.dir}/classes
@@ -46,8 +47,8 @@ javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.6
-javac.target=1.6
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -68,12 +69,20 @@ jnlp.codebase.type=local
 jnlp.codebase.url=file:/F:/Chalmers/SDCS/TDA261%20-%20Frontiers%20of%20programming%20language%20technology/2009/My%20Programming%20Language%20Project/AntiInferenceHub/dist/
 jnlp.descriptor=application
 jnlp.enabled=false
-jnlp.mixed.code=defaut
+jnlp.mixed.code=default
 jnlp.offline-allowed=false
 jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=info.sarihh.antiinferencehub.App
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
