--- a/src/info/sarihh/antiinferencehub/resources/App.properties
+++ b/src/info/sarihh/antiinferencehub/resources/App.properties
@@ -2,7 +2,7 @@ Application.name = AntiInferenceHub
 Application.title = Anti Inference Hub
 Application.version = 0.2
 Application.vendor = Sari Haj Hussein
-Application.homepage = http://aih.sourceforge.net
+Application.homepage = https://github.com/angyjoe/aih
 Application.description = Anti Inference Hub is the first dynamic query processing engine that defends against the Inference Problem in Multilevel Databases by integrating smoothly with common DBMSs (Oracle, PostgreSQL, and MySQL), and monitoring queries submitted by users.
 Application.vendorId = Sari Haj Hussein
 Application.id = AntiInferenceHub
