About box and binaries.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,12 +1,18 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
+annotation.processing.run.all.processors=true
 application.desc=Anti Inference Hub is the first dynamic query processing engine that defends against the Inference Problem in Multilevel Databases by integrating smoothly with common DBMSs (Oracle, PostgreSQL, and MySQL), and monitoring queries submitted by users.
-application.homepage=http://aih.sourceforge.net
+application.homepage=https://github.com/angyjoe/aih
 application.title=Anti Inference Hub
 application.vendor=Sari Haj Hussein
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
 build.dir=build
 build.generated.dir=${build.dir}/generated
+build.generated.sources.dir=${build.dir}/generated-sources
 # Only compile against the classpath explicitly listed here:
 build.sysclasspath=ignore
 build.test.classes.dir=${build.dir}/test/classes
@@ -19,26 +25,35 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/AntiInferenceHub.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.classes12.zip=lib/classes12.zip
 file.reference.jsyntaxpane-0.9.4.jar=lib/jsyntaxpane-0.9.4.jar
+file.reference.jsyntaxpane-0.9.4.jar-1=lib/jsyntaxpane-0.9.4.jar
 file.reference.mysql-connector-java-5.1.10-bin.jar=lib/mysql-connector-java-5.1.10-bin.jar
+file.reference.mysql-connector-java-5.1.10-bin.jar-1=lib/mysql-connector-java-5.1.10-bin.jar
 file.reference.postgresql-8.2-507.jdbc4.jar=lib/postgresql-8.2-507.jdbc4.jar
+file.reference.postgresql-8.2-507.jdbc4.jar-1=lib/postgresql-8.2-507.jdbc4.jar
 file.reference.xercesImpl.jar=lib/xercesImpl.jar
+file.reference.xercesImpl.jar-1=lib/xercesImpl.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.swing-app-framework.classpath}:\
     ${file.reference.classes12.zip}:\
-    ${file.reference.jsyntaxpane-0.9.4.jar}:\
-    ${file.reference.mysql-connector-java-5.1.10-bin.jar}:\
-    ${file.reference.postgresql-8.2-507.jdbc4.jar}:\
-    ${file.reference.xercesImpl.jar}
+    ${file.reference.jsyntaxpane-0.9.4.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.10-bin.jar-1}:\
+    ${file.reference.postgresql-8.2-507.jdbc4.jar-1}:\
+    ${file.reference.xercesImpl.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
-javac.source=1.5
-javac.target=1.5
+javac.processorpath=\
+    ${javac.classpath}
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -57,12 +72,22 @@ javadoc.version=false
 javadoc.windowtitle=
 jnlp.codebase.type=local
 jnlp.codebase.url=file:/F:/Chalmers/SDCS/TDA261%20-%20Frontiers%20of%20programming%20language%20technology/2009/My%20Programming%20Language%20Project/AntiInferenceHub/dist/
+jnlp.descriptor=application
 jnlp.enabled=false
+jnlp.mixed.code=default
 jnlp.offline-allowed=false
 jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=cc.co.sarihh.antiinferencehub.App
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
