--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,11 +1,11 @@
+application.args=-HubClient
+compile.on.save=false
 do.depend=false
 do.jar=true
-file.reference.classes12.zip=F:\\My Researches\\Sourceforge\\Anti Inference Hub\\AntiInferenceHub\\lib\\classes12.zip
-file.reference.jsyntaxpane-0.9.4.jar=F:\\My Researches\\Sourceforge\\Anti Inference Hub\\AntiInferenceHub\\lib\\jsyntaxpane-0.9.4.jar
-file.reference.mysql-connector-java-5.1.10-bin.jar=F:\\My Researches\\Sourceforge\\Anti Inference Hub\\AntiInferenceHub\\lib\\mysql-connector-java-5.1.10-bin.jar
-file.reference.postgresql-8.2-507.jdbc4.jar=F:\\My Researches\\Sourceforge\\Anti Inference Hub\\AntiInferenceHub\\lib\\postgresql-8.2-507.jdbc4.jar
-file.reference.xercesImpl.jar=F:\\My Researches\\Sourceforge\\Anti Inference Hub\\AntiInferenceHub\\lib\\xercesImpl.jar
+file.reference.jsyntaxpane-0.9.4.jar=D:\\Open Source Projects\\Anti Inference Hub\\GitHub
+file.reference.mysql-connector-java-5.1.10-bin.jar=D:\\Open Source Projects\\Anti Inference Hub\\GitHub
+file.reference.postgresql-8.2-507.jdbc4.jar=D:\\Open Source Projects\\Anti Inference Hub\\GitHub
+file.reference.xercesImpl.jar=D:\\Open Source Projects\\Anti Inference Hub\\GitHub
 javac.debug=true
 javadoc.preview=true
-jaxws.endorsed.dir=C:\\Program Files\\NetBeans 6.0\\java1\\modules\\ext\\jaxws21\\api
-user.properties.file=C:\\Documents and Settings\\Sari\\.netbeans\\6.0\\build.properties
+user.properties.file=C:\\Users\\Sari\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
